Upgrade libraries, format code